# izfs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-api.yml  prerelease.yml  release.yml
api/: Cargo.toml
api/src/: main.rs
config/: api.Dockerfile
web/: index.html  package-lock.json
web/components/: button.tsx
web/pages/: index.html
web/src/: App.css  App.tsx  AuthPage.tsx  ImageUploader.tsx  Root.css  Root.tsx  Upload.tsx  index.css  main.tsx
web/src/services/: login-utils.tsx
